<resources>
    <string name="app_name">Group_11_Project_App_SEG2105</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="program_of_study">Program Of Study</string>
    <string name="highest_degree">Highest Degree</string>
    <string-array name="registration_roles">
        <item>Student Registration</item>
        <item>Tutor Registration</item>
    </string-array>

</resources>