<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#101820"
    android:scrollbarTrackVertical="?android:attr/scrollbarTrackVertical"
    app:layout_collapseMode="none"
    app:layout_scrollEffect="compress">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="Student Registration"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp">

    <LinearLayout
        android:id="@+id/RegistrationCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1E1E2C"
        android:clipToOutline="true"
        android:elevation="6dp"
        android:orientation="vertical"
        android:padding="24dp">


        <EditText
            android:id="@+id/firstNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@android:drawable/ic_media_play"
            android:drawablePadding="10dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="12dp"
            android:background="#333333" />

        <EditText
            android:id="@+id/lastNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@android:drawable/ic_media_play"
            android:drawablePadding="10dp"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="12dp"
            android:background="#333333" />


        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@android:drawable/ic_menu_send"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="12dp"
            android:background="#333333" />

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="12dp"
            android:background="#333333" />

        <EditText
            android:id="@+id/confirmPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:drawablePadding="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="12dp"
            android:background="#333333" />

        <EditText
            android:id="@+id/phoneNumberField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@android:drawable/stat_sys_phone_call"
            android:drawablePadding="10dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="12dp"
            android:background="#333333" />

        <EditText
            android:id="@+id/programOfStudyField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@android:drawable/ic_menu_edit"
            android:drawablePadding="10dp"
            android:hint="@string/program_of_study"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#AAAAAA" />


        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#00ADEF"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account? Log in"
            android:textColor="#00ADEF"
            android:textStyle="bold"
            android:paddingTop="12dp"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
